--- a/public/cherry/member/memberForm.html
+++ b/public/cherry/member/memberForm.html
@@ -95,7 +95,9 @@
 				<td colspan="3">
 					<button class="btn btn-outline-secondary" type="button" id="button-addon1" data-bs-toggle="modal"
 						data-bs-target="#exampleModal">주소 찾기
-					</button> <!--MODAL -->
+					</button> 
+					
+					<!--MODAL -->
 					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog modal-dialog-centered">
 							<div class="modal-content">
@@ -121,7 +123,8 @@
 								</div>
 							</div>
 						</div>
-					</div> <!-- MODAL END --> <input class="form-control" type="text" placeholder="주소를 입력하세요" id="" name="address">
+					</div> <!-- MODAL END --> 
+					<input class="form-control" type="text" placeholder="주소를 입력하세요" id="" name="address">
 				</td>
 			</tr>
 			<tr>
