--- a/public/durian/html/xdmin/member/memberForm.html
+++ b/public/durian/html/xdmin/member/memberForm.html
@@ -46,33 +46,33 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-12 col-sm-6">
+				<div class="col-12 col-sm-6 mt-3">
 					비밀번호<input type="password" class="form-control my-2">
 				</div>
-				<div class="col-12 col-sm-6">
+				<div class="col-12 col-sm-6 mt-3">
 					비밀번호확인<input type="password" class="form-control my-2">
 				</div>
-				<div class="col-12 col-sm-6">
+				<div class="col-12 col-sm-6 mt-3">
 					이름<input type="text" class="form-control my-2">
 				</div>
-				<div class="col-12 col-sm-6">
+				<div class="col-12 col-sm-6 mt-3">
 					성<input type="text" class="form-control my-2">
 				</div>
-				<div class="col-12 col-sm-6">
+				<div class="col-12 col-sm-6 mt-3">
 					이름(영문)<input type="text" class="form-control my-2">
 				</div>
-				<div class="col-12 col-sm-6">
+				<div class="col-12 col-sm-6 mt-3">
 					성(영문)<input type="text" class="form-control my-2">
 				</div>
-				<div class="col-12 col-sm-6">
+				<div class="col-12 col-sm-6 mt-3">
 					성별<select class="form-select my-2"><option>::선택::
 						<option>남
 						<option>여</select>
 				</div>
-				<div class="col-12 col-sm-6">
+				<div class="col-12 col-sm-6 mt-3">
 					생일<input type="date" class="form-control my-2">
 				</div>
-				<div class="col-12 col-sm-6">
+				<div class="col-12 col-sm-6 mt-3">
 					Email
 					<div class="input-group my-2">
 						<input type="text" class="form-control">
@@ -85,35 +85,52 @@
 						</select>
 					</div>
 				</div>
-				<div class="col-12 col-sm-6">
-					이메일 정보 마케팅 사용 동의
-					<br>
+				<div class="col-12 col-sm-6 mt-3">
+					이메일 정보 마케팅 사용 동의 <br>
 					<div class="form-check my-3">
-						<input type="checkbox" class="form-check-input" id="emailMarketing">
-						<label class="form-check-label" for="emailMarketing">동의합니다.</label>
+						<input type="checkbox" class="form-check-input" id="emailMarketing"> <label class="form-check-label"
+							for="emailMarketing">동의합니다.</label>
 					</div>
 				</div>
-				
-				<div class="col-12 col-sm-6" style="display: inline;">
+
+				<div class="col-12 col-sm-6 mt-3">
 					휴대폰
-					<select class="form-select" style="width:100px;">
-						<option>SKT
-						<option>KT
-						<option>LG
-					</select>
-					<input type="text" class="form-control" style="width:100px;">
+					<div class="row my-2">
+						<div class="col-sm-4">
+							<select class="form-select">
+								<option>SKT
+								<option>KT
+								<option>LG
+							</select>
+						</div>
+						<div class="col-sm-2">
+							<input type="text" class="form-control" placeholder="010">
+						</div>
+						<div class="col-sm-3">
+							<input type="text" class="form-control" placeholder="1234">
+						</div>
+						<div class="col-sm-3">
+							<input type="text" class="form-control" placeholder=5678>
+						</div>
+					</div>
 				</div>
-				<div class="col-12 col-sm-6">
-					휴대폰 정보 마케팅 사용 동의
-					<br>
-					<div class="my-3">
-						<input type="checkbox" class="form-check-input" id="phoneMarketing">
-						<label class="form-check-label" for="phoneMarketing">동의합니다.</label>
+				<div class="col-12 col-sm-6 mt-3">
+					휴대폰 정보 마케팅 사용 동의 <br>
+					<div class="form-check my-3">
+						<input type="checkbox" class="form-check-input" id="phoneMarketing"> <label class="form-check-label"
+							for="phoneMarketing">동의합니다.</label>
 					</div>
 				</div>
 
 
 			</div>
+			<br><br>
+			<nav>
+				<ul class="pagination justify-content-center">
+					<li class="page-item disabled"><a class="page-link" href="#">1</a></li>
+					<li class="page-item"><a class="page-link" href="./memberForm2.html">2</a></li>
+				</ul>
+			</nav>
 
 			<br> <br> <br>
 			<div class="row bg-light">
@@ -130,7 +147,7 @@
 	</form>
 
 
-	
+
 
 	<script src="../../../bootstrap/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
