--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -19,7 +19,8 @@
 				</div>
 				<div class="col-sm-6 fs-4 mb-2">Coupang Management System</div>
 				<div class="col-sm-2 fs-6 mb-2">
-					<a href="#">관리자 프로필</a>
+					<img src="../../../images/xdmin/user.png" style="width: 50px;">
+					<a href="#">프로필</a>
 				</div>
 				<div class="col-sm-1 mb-2">
 					<select class="form-select">
@@ -100,7 +101,7 @@
 			<br> <br>
 
 			<!-- 테이블 -->
-
+<!-- 
 			<div class="border mb-2">
 				<div class="row bg-dark text-light">
 					<div class="col">
@@ -188,7 +189,7 @@
 				</div>
 			</div>
 
-
+ -->
 			<br> <br>
 			<div class="table-responsive">
 				<table class="table table-hover">
