--- a/public/durian/html/xdmin/member/memberForm2.html
+++ b/public/durian/html/xdmin/member/memberForm2.html
@@ -19,7 +19,8 @@
 				</div>
 				<div class="col-sm-6 fs-4 mb-2">Coupang Management System</div>
 				<div class="col-sm-2 fs-6 mb-2">
-					<a href="#">관리자 프로필</a>
+					<img src="../../../images/xdmin/user.png" style="width: 50px;">
+					<a href="#">프로필</a>
 				</div>
 				<div class="col-sm-1 mb-2">
 					<select class="form-select">
