--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -42,11 +42,11 @@
 			<div class="row border m-2">
 				<div class="row mb-2">
 					<div class="col-sm-2 p-2 pt-3">
-						<select class="form-select"><option>삭제여부</option>selected
+						<select class="form-select"><option selected>삭제여부</option>
 						</select>
 					</div>
 					<div class="col-sm-2 p-2 pt-3">
-						<select class="form-select"><option>날짜</option>selected
+						<select class="form-select"><option selected>날짜</option>
 						</select>
 					</div>
 					<div class="col-sm-2 p-2 pt-3">
@@ -58,7 +58,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-2 p-2 pb-3">
-						<select class="form-select"><option>검색구분</option>selected
+						<select class="form-select"><option selected disabled>검색구분</option>
 						</select>
 					</div>
 					<div class="col-sm-2 p-2 pb-3">
