--- a/public/durian/html/xdmin/member/memberForm2.html
+++ b/public/durian/html/xdmin/member/memberForm2.html
@@ -19,8 +19,7 @@
 				</div>
 				<div class="col-sm-6 fs-4 mb-2">Coupang Management System</div>
 				<div class="col-sm-2 fs-6 mb-2">
-					<img src="../../../images/xdmin/user.png" style="width: 50px;">
-					<a href="#">프로필</a>
+					<img src="../../../images/xdmin/user.png" style="width: 50px;"> <a href="#">프로필</a>
 				</div>
 				<div class="col-sm-1 mb-2">
 					<select class="form-select">
@@ -107,6 +106,20 @@
 
 			</div>
 
+			<div class="row mt-3">
+				<div class="col-12 col-sm-6">
+					약관동의
+					<div class="col-12">
+						<input type="checkbox" name="termsConsent" onclick="selectAll(this)">전체 약관동의
+					</div>
+					<div class="col-12 border">
+						<input type="checkbox" name="termsConsent" class="m-2">회원가입 및 운영약관 동의 (필수)<br> <input type="checkbox"
+							name="termsConsent" class="m-2">개인정보 수집 및 이용 동의 (필수)<br> <input type="checkbox" name="termsConsent" class="m-2">이메일
+						정보 마케팅 사용 동의 (선택)<br> <input type="checkbox" name="termsConsent" class="m-2">휴대전화 정보 마케팅 사용 동의 (선택)<br>
+					</div>
+				</div>
+			</div>
+
 			<br> <br>
 			<nav>
 				<ul class="pagination justify-content-center">
@@ -158,6 +171,18 @@
 	</div>
 	<!-- MODAL END -->
 
+	<script type="text/javascript">
+
+	function selectAll(selectAll) {
+		const checkboxes 
+			= document.getElementsByName("termsConsent");
+		
+		checkboxes.forEach((checkbox) => {
+			checkbox.checked = selectAll.checked;
+		})
+	}
+	
+</script>
 
 	<script src="../../../bootstrap/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 
