--- a/public/bootstrapexc.html
+++ b/public/bootstrapexc.html
@@ -18,15 +18,24 @@ a {
 
 <body>
 
-
-	<div class="row">
-		<div class="col-6">111</div>
-
-		<div class="col-6">
-			<div class="row">
-				<div class="col-6 bg-primary">111</div>
-				<div class="col-6 bg-success">111</div>
-			</div>
+asdasdasdasd11<br><br>
+asdasdasdasd11<br><br>
+asdasdasdasd11<br><br>
+	<button class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
+		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+			viewBox="0 0 16 16">
+  		<path fill-rule="evenodd"
+				d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+		</svg>
+	</button>
+	<div class="collapse" id="collapseNavbar">
+		<div class="card card-body p-0">
+			<ul class="nav bg-secondary">
+					<li class="nav-item"><a class="nav-link link-light" href="#">Home</a></li>
+					<li class="nav-item"><a class="nav-link link-light" href="#">Features</a></li>
+					<li class="nav-item"><a class="nav-link link-light" href="#">시스템 관리</a></li>
+					<li class="nav-item"><a class="nav-link link-light" href="#">Dropdown</a></li>
+				</ul>
 		</div>
 	</div>
 
