--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -10,25 +10,47 @@
 
 <body>
 
+
 	<form>
-		<div class="container-fluid">
+		<div class="container-fluid bg-light">
 			<br>
 			<div class="row">
-				<div class="col-sm-2">
+				<div class="col-12 col-sm-2">
 					<img src="../../../images/xdmin/coupang.png" class="img-fluid">
 				</div>
-				<div class="col-sm-6 fs-4 mb-2">Coupang Management System</div>
-				<div class="col-sm-2 fs-6 mb-2">
+				<div class="col-12 col-sm-5 fs-4 mb-2">Coupang Management System</div>
+				<div class="col-12 col-sm-2 fs-6 mb-2">
 					<img src="../../../images/xdmin/user.png" style="width: 50px;">
 					<a href="#">프로필</a>
 				</div>
-				<div class="col-sm-1 mb-2">
+				<div class="col-12 col-sm-2 mb-2">
 					<select class="form-select">
 						<option>언어</option>
 					</select>
 				</div>
+				<div class="col-12 col-sm-1">
+				
+				<button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
+					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+						viewBox="0 0 16 16">
+			  		<path fill-rule="evenodd"
+							d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+					</svg>
+				</button>
+	
+				
+				</div>
 			</div>
-
+			
+			<div class="row collapse" id="collapseNavbar">
+				<ul class="nav bg-secondary">
+					<li class="nav-item"><a class="nav-link link-light" href="#">Home</a></li>
+					<li class="nav-item"><a class="nav-link link-light" href="#">Features</a></li>
+					<li class="nav-item"><a class="nav-link link-light" href="#">시스템 관리</a></li>
+					<li class="nav-item"><a class="nav-link link-light" href="#">Dropdown</a></li>
+				</ul>
+			</div>
+			<!-- 
 			<div class="row">
 				<ul class="nav bg-secondary">
 					<li class="nav-item"><a class="nav-link link-light" href="#">Home</a></li>
@@ -37,6 +59,9 @@
 					<li class="nav-item"><a class="nav-link link-light" href="#">Dropdown</a></li>
 				</ul>
 			</div>
+			 -->
+			</div>
+			<div class="container-fluid">
 			<br>
 			<div class="fs-3">Code</div>
 			<div class="row border m-2">
@@ -101,7 +126,7 @@
 			<br> <br>
 
 			<!-- 테이블 -->
-<!-- 
+			<!-- 
 			<div class="border mb-2">
 				<div class="row bg-dark text-light">
 					<div class="col">
@@ -312,8 +337,8 @@
 					</div>
 				</div>
 				<div class="col p-0">
-					<a class="btn btn-primary" href="./memberForm.html"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-							class="bi bi-plus-square" viewBox="0 0 16 16">
+					<a class="btn btn-primary" href="./memberForm.html"> <svg xmlns="http://www.w3.org/2000/svg" width="16"
+							height="16" fill="currentColor" class="bi bi-plus-square" viewBox="0 0 16 16">
 						  <path
 								d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
 						  <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
