--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -12,7 +12,7 @@
 
 
 	<form>
-		<div class="container-fluid bg-light">
+		<div class="container-fluid">
 			<br>
 			<div class="row">
 				<div class="col-12 col-sm-2">
@@ -23,12 +23,12 @@
 					<img src="../../../images/xdmin/user.png" style="width: 50px;">
 					<a href="#">프로필</a>
 				</div>
-				<div class="col-12 col-sm-2 mb-2">
+				<div class="col-6 col-sm-1 mb-2">
 					<select class="form-select">
 						<option>언어</option>
 					</select>
 				</div>
-				<div class="col-12 col-sm-1">
+				<div class="col-6 col-sm-2 text-end">
 				
 				<button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
 					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
@@ -60,8 +60,6 @@
 				</ul>
 			</div>
 			 -->
-			</div>
-			<div class="container-fluid">
 			<br>
 			<div class="fs-3">Code</div>
 			<div class="row border m-2">
