--- a/public/durian/html/xdmin/member/memberList.html
+++ b/public/durian/html/xdmin/member/memberList.html
@@ -143,7 +143,7 @@
 			<div class="row">
 				<div class="col-8 col-md-3 ms-3 border border-2 p-1">검색결과 : 13 / 총 13명 검색결과</div>
 				<div class="col-1 col-md-1 ms-1">
-					<a class="btn btn-success"> 
+					<a class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#excelModal"> 
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 							class="bi bi-file-earmark-excel" viewBox="0 0 16 16">
 						  <path
@@ -172,6 +172,7 @@
 					</div>
 				</div>
 			</div>
+
 
 			<!-- 테이블 -->
 			<!-- 
@@ -407,6 +408,74 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		
+		<div class="modal fade" id="excelModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <h5 class="modal-title fw-bold" id="staticBackdropLabel">Export data to Excel</h5>
+		        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		      </div>
+		      <div class="modal-body">
+		      	<div class="bg-light text-center">
+	      			<span class="fw-bold">파일명</span>
+	      			<input type="text">
+	      			<span class="fw-bold">.csv</span>
+		      	</div>
+		      	<br>
+		        <table class="table table-sm table-hover">
+			        <thead class="bg-light">
+			        	<tr class="text-center">
+			        		<td colspan="4">출력항목</td>
+						</tr>	
+					</thead>	        
+			        	<tr>
+			        		<td><input type="checkbox" class="form-check-input" id="ch11"></td>
+			        		<td><label for="ch11" class="form-check-label">아이디</label></td>
+			        		<td><input type="checkbox" class="form-check-input" id="ch12"></td>
+			        		<td><label for="ch12" class="form-check-label">이름</label></td>
+						</tr>		        
+			        	<tr>
+			        		<td><input type="checkbox" class="form-check-input" id="ch1"></td>
+			        		<td><label for="ch1" class="form-check-label">이메일</label></td>
+			        		<td><input type="checkbox" class="form-check-input" id="ch2"></td>
+			        		<td><label for="ch2" class="form-check-label">생년월일</label></td>
+						</tr>		        
+			        	<tr>
+			        		<td><input type="checkbox" class="form-check-input" id="ch3"></td>
+			        		<td><label for="ch3" class="form-check-label">메일수신동의</label></td>
+			        		<td><input type="checkbox" class="form-check-input" id="ch4"></td>
+			        		<td><label for="ch4" class="form-check-label">주소</label></td>
+						</tr>		        
+			        	<tr>
+			        		<td><input type="checkbox" class="form-check-input" id="ch5"></td>
+			        		<td><label for="ch5" class="form-check-label">전화번호</label></td>
+			        		<td><input type="checkbox" class="form-check-input" id="ch6"></td>
+			        		<td><label for="ch6" class="form-check-label">휴대전화</label></td>
+						</tr>		        
+			        	<tr>
+			        		<td><input type="checkbox" class="form-check-input" id="ch7"></td>
+			        		<td><label for="ch7" class="form-check-label">SMS수신동의</label></td>
+			        		<td><input type="checkbox" class="form-check-input" id="ch8"></td>
+			        		<td><label for="ch8" class="form-check-label">별명</label></td>
+						</tr>		        
+			        	<tr>
+			        		<td><input type="checkbox" class="form-check-input" id="ch9"></td>
+			        		<td><label for="ch9" class="form-check-label">사용자정의1</label></td>
+			        		<td><input type="checkbox" class="form-check-input" id="ch10"></td>
+			        		<td><label for="ch10" class="form-check-label">성별</label></td>
+						</tr>		        
+		        			        
+		        </table>
+		        
+		      </div>
+		      <div class="modal-footer d-flex justify-content-center">
+		        <button type="button" class="btn btn-primary">다운</button>
+		        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+		      </div>
+		    </div>
+		  </div>
 		</div>
 
 	</form>
