--- a/public/durian/html/xdmin/member/memberList2.html
+++ b/public/durian/html/xdmin/member/memberList2.html
@@ -85,10 +85,9 @@
 			<br>
 			<div class="fs-3">Code</div>
 			
-			<div class="row border border-2">
+			<div class="row border-top border-bottom border-2 my-2">
 				<div class="col-9 col-md-9">
-				<br>
-					<div class="row my-2">
+					<div class="row my-2 pt-2">
 						<div class="col-md-2">회원등급</div>
 						<div class="col-md-10">
 							<div class="form-check-inline">
@@ -127,7 +126,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="row my-2">
+					<div class="row my-2 pb-2">
 						<div class="col-md-2">검색어</div>
 						<div class="col-md-10">
 							
@@ -152,7 +151,7 @@
 					</div>
 				</div>
 				<div class="col-3 col-md-3 text-end" style="margin: auto;">
-					<button class="btn btn-info">
+					<button class="btn btn-info btn-lg">
 						<span class="text-white">검색</span>
 					</button>
 				</div>
@@ -173,7 +172,7 @@
 						</svg>
 					</a>
 				</div>
-				<div class="col-12 col-md-7 ms-1 me-0 my-1">
+				<div class="col-12 col-md ms-1 me-0 my-1">
 					<div class="text-end">
 						<div class="btn-group btn-group-sm" role="group">
 							<input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" disabled> <label
@@ -290,7 +289,7 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<th><input type="checkbox" name="checkbox1" onclick="selectAll1(this)"></th>
+							<th><input type="checkbox" name="checkbox1" onclick="selectAll1(this)" class="form-check-input"></th>
 							<th>#</th>
 							<th>Firstname</th>
 							<th>Lastname</th>
@@ -304,7 +303,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td><input type="checkbox" name="checkbox1"></td>
+							<td><input type="checkbox" name="checkbox1" class="form-check-input"></td>
 							<td>1</td>
 							<td>영민</td>
 							<td>윤</td>
@@ -316,7 +315,7 @@
 							<td>Yes</td>
 						</tr>
 						<tr>
-							<td><input type="checkbox" name="checkbox1"></td>
+							<td><input type="checkbox" name="checkbox1" class="form-check-input"></td>
 							<td>2</td>
 							<td></td>
 							<td></td>
@@ -328,7 +327,7 @@
 							<td></td>
 						</tr>
 						<tr>
-							<td><input type="checkbox" name="checkbox1"></td>
+							<td><input type="checkbox" name="checkbox1" class="form-check-input"></td>
 							<td>3</td>
 							<td></td>
 							<td></td>
@@ -340,7 +339,7 @@
 							<td></td>
 						</tr>
 						<tr>
-							<td><input type="checkbox" name="checkbox1"></td>
+							<td><input type="checkbox" name="checkbox1" class="form-check-input"></td>
 							<td>4</td>
 							<td></td>
 							<td></td>
@@ -352,7 +351,7 @@
 							<td></td>
 						</tr>
 						<tr>
-							<td><input type="checkbox" name="checkbox1"></td>
+							<td><input type="checkbox" name="checkbox1" class="form-check-input"></td>
 							<td>5</td>
 							<td></td>
 							<td></td>
