--- a/public/durian/html/xdmin/member/memberList2.html
+++ b/public/durian/html/xdmin/member/memberList2.html
@@ -88,7 +88,7 @@
 			<div class="row border-top border-bottom border-2 my-2">
 				<div class="col-9 col-md-9">
 					<div class="row my-2 pt-2">
-						<div class="col-md-2">회원등급</div>
+						<div class="col-md-2">ㆍ회원등급</div>
 						<div class="col-md-10">
 							<div class="form-check-inline">
 								<input type="checkbox" class="form-check-input" id="memberRankAll" name="memberRank" onclick="selectAll2(this)"> <label
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 					<div class="row my-2">
-						<div class="col-md-2">수신동의</div>
+						<div class="col-md-2">ㆍ수신동의</div>
 						<div class="col-md-10">
 							<div class="form-check-inline">
 								<input type="checkbox" class="form-check-input" id="consentSms" name=""> <label for="consentSms"
@@ -127,7 +127,7 @@
 						</div>
 					</div>
 					<div class="row my-2 pb-2">
-						<div class="col-md-2">검색어</div>
+						<div class="col-md-2">ㆍ검색어</div>
 						<div class="col-md-10">
 							
 							<div class="row g-3">
