--- a/public/bootstrapexc2.html
+++ b/public/bootstrapexc2.html
@@ -18,23 +18,25 @@ a {
 
 <body>
 
-	<button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
+	<button class="btn btn-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling">
 		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
 			viewBox="0 0 16 16">
 			  		<path fill-rule="evenodd"
 				d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
 					</svg>
 	</button>
-	<div class="row collapse show" id="collapseNavbar">
-		<ul class="nav bg-secondary">
-			<li class="nav-item"><a class="nav-link link-light" href="#">Home</a></li>
-			<li class="nav-item"><a class="nav-link link-light" href="#">Features</a></li>
-			<li class="nav-item"><a class="nav-link link-light" href="#">시스템 관리</a></li>
-			<li class="nav-item"><a class="nav-link link-light" href="#">Dropdown</a></li>
-		</ul>
+
+	<div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+		id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+		<div class="offcanvas-header">
+			<h5 class="offcanvas-title" id="offcanvasScrollingLabel">Colored with scrolling</h5>
+			<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+		</div>
+		<div class="offcanvas-body">
+			<p>Try scrolling the rest of the page to see this option in action.</p>
+		</div>
 	</div>
-	
-	
+
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
