--- a/public/durian/html/xdmin/loginout/login.html
+++ b/public/durian/html/xdmin/loginout/login.html
@@ -6,6 +6,8 @@
 <title>로그인 화면</title>
 <link rel="stylesheet" href="../../../bootstrap/bootstrap-5.1.3-dist/css/bootstrap.min.css">
 
+<link rel="stylesheet" href="../../../css/style.css">
+
 <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 
 
