--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -10,59 +10,69 @@
 
 <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 
-
 </head>
 
 
 
 <body>
 	<form>
-		<div class="container bg-light">
+		<div class="container">
 			<br>
-			<div class="row justify-content-center">
+			<div class="row justify-content-center mb-3">
 				<img src="../../../images/xdmin/coupang2.png" alt="coupang_logo" class="p-0" style="width:195px; height:46px;">
 			</div>
-			<br>
 
 			<div class="row justify-content-center">
-				<div style="width: 380px;" class="p-0">
+				<div style="width: 480px;" class="p-0">
 
-					<div class="list-group">
-						<div class="list-group-item d-flex gap-3 py-3">
-							<img src="../../../images/xdmin/user.png" alt="" width="32" height="32">
-							<div class="d-flex gap-2 w-100 justify-content-between">
-								<div>
-									<input type="text" class="form-control" placeholder="user name">
-								</div>
+					<div class="input-group input-group-lg mb-3">
+						<span class="input-group-text bg-light" id="userIcon">
+							<label for="Username">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle text-secondary" viewBox="0 0 16 16">
+								  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+								  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+								</svg>	
+							</label>
+						</span>
+						<input type="text" class="form-control" id="Username" placeholder="아이디(이메일)" aria-label="Username" aria-describedby="userIcon">
+					</div>
+					
+					<div class="input-group input-group-lg mb-3">
+						<span class="input-group-text bg-light" id="passwordIcon">
+							<label for="Password">
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill text-secondary" viewBox="0 0 16 16">
+								  <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
+								</svg>
+							</label>
+						</span>
+						<input type="password" class="form-control" id="Password" placeholder="비밀번호" aria-label="Password" aria-describedby="passwordIcon">
+					</div>
+					<div class="col-12">
+						<div class="row mb-3">
+							<div class="col-md-3 form-check ms-3">
+								<input type="checkbox" class="form-check-input" id="autoLogin">
+								<label for="autoLogin" class="form-check-label fw-lighter">자동 로그인</label>
 							</div>
-						</div>
-						<div class="list-group-item d-flex gap-3 py-3" aria-current="true">
-							<img src="../../../images/xdmin/password.png" alt="" width="32" height="32">
-							<div class="d-flex gap-2 w-100 justify-content-between">
-								<div>
-									<input type="password" class="form-control" placeholder="password">
-								</div>
+							<div class="col-md text-end">
+								<a href="#" style="text-decoration:none;">
+									아이디(이메일)/비밀번호 찾기
+								</a>
+								<span class="text-primary fw-bolder">
+									>
+								</span>
 							</div>
 						</div>
 					</div>
-
-					<br>
-					<div class="row">
-						<div class="col-1 pe-0 ps-4">
-							<input type="checkbox" id="autologin">
-						</div>
-						<div class="col-5">
-							<label for="autologin">자동 로그인</label>
-						</div>
-						<div class="col-6 pe-0">
-							<a href="#">아이디/비밀번호 찾기</a>
-						</div>
-					</div>
-					<br>
 
 					<div class="row">
 						<div class="col-12">
-							<input type="submit" value="로그인" class="form-control">
+							<button class="btn btn-primary" style="width: 100%; height: 48px;"><span class="fw-bold">로그인</span></button>
+						</div>
+					</div>
+					<hr>
+					<div class="row">
+						<div class="col-12">
+							<button class="btn border" style="width: 100%; height: 48px;"><span class="text-primary fw-bold">회원가입</span></button>
 						</div>
 					</div>
 
@@ -74,7 +84,7 @@
 
 
 			<div class="d-flex justify-content-center">
-				<div class="row row-cols-1" style="width: 380px;">
+				<div class="row row-cols-1" style="width: 480px;">
 					<button type="button" class="btn btn-primary mb-1">
 						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png"> 페이스북 계정으로 로그인
 					</button>
@@ -89,7 +99,13 @@
 					</button>
 				</div>
 			</div>
-
+			<div class="row text-center mt-3">
+				<div class="col">
+					<div class="fs-6 fw-lighter">
+						©Coupang Corp. All rights reserved.
+					</div>
+				</div>
+			</div>
 			<br> <br>
 		</div>
 	</form>
