--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -49,11 +49,11 @@
 					</div>
 					<div class="col-12">
 						<div class="row mb-3">
-							<div class="col-md-3 form-check ms-3">
+							<div class="col-4 col-md-3 form-check ms-3">
 								<input type="checkbox" class="form-check-input" id="autoLogin">
 								<label for="autoLogin" class="form-check-label fw-lighter">자동 로그인</label>
 							</div>
-							<div class="col-md text-end">
+							<div class="col col-md text-end">
 								<a href="#" style="text-decoration:none;">
 									아이디(이메일)/비밀번호 찾기
 								</a>
@@ -84,18 +84,46 @@
 
 
 			<div class="d-flex justify-content-center">
-				<div class="row row-cols-1" style="width: 480px;">
+				<div class="row" style="width: 480px;">
 					<button type="button" class="btn btn-primary mb-1">
-						<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png"> 페이스북 계정으로 로그인
+						<div class="row">
+							<div class="col-1 col-md-1 text-start">
+								<img src="../../../images/xdmin/sns_icon/icon_round_facebook_48.png"> 
+							</div>
+							<div class="col col-md fw-bold" style="margin:auto;">
+								페이스북 계정으로 로그인
+							</div>
+						</div>
 					</button>
 					<button type="button" class="btn btn-warning mb-1">
-						<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png"> 카카오 계정으로 로그인
+						<div class="row">
+							<div class="col-1 col-md-1 text-start">
+								<img src="../../../images/xdmin/sns_icon/icon_round_kakaotalk_48.png"> 
+							</div>
+							<div class="col col-md fw-bold" style="margin:auto;">
+								카카오 계정으로 로그인
+							</div>
+						</div>
 					</button>
 					<button type="button" class="btn btn-success mb-1">
-						<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png"> 네이버 계정으로 로그인
+						<div class="row">
+							<div class="col-1 col-md-1 text-start">
+								<img src="../../../images/xdmin/sns_icon/icon_round_naver_48.png"> 
+							</div>
+							<div class="col col-md fw-bold" style="margin:auto;">
+								네이버 계정으로 로그인
+							</div>
+						</div>
 					</button>
 					<button type="button" class="btn btn-default mb-1 border">
-						<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png"> 구글 계정으로 로그인
+						<div class="row">
+							<div class="col-1 col-md-1 text-start">
+								<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png">
+							</div>
+							<div class="col col-md fw-bold" style="margin:auto;">
+						 		구글 계정으로 로그인
+						 	</div>
+						 </div>
 					</button>
 				</div>
 			</div>
