--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -16,7 +16,7 @@
 
 <body>
 	<form>
-		<div class="container">
+		<div class="container-fluid bg-light">
 			<br>
 			<div class="row justify-content-center mb-3">
 				<img src="../../../images/xdmin/coupang2.png" alt="coupang_logo" class="p-0" style="width:195px; height:46px;">
@@ -72,7 +72,7 @@
 					<hr>
 					<div class="row">
 						<div class="col-12">
-							<button class="btn border" style="width: 100%; height: 48px;"><span class="text-primary fw-bold">회원가입</span></button>
+							<button class="btn border box-white" style="width: 100%; height: 48px;"><span class="text-primary fw-bold">회원가입</span></button>
 						</div>
 					</div>
 
@@ -84,7 +84,7 @@
 
 
 			<div class="d-flex justify-content-center">
-				<div class="row" style="width: 480px;">
+				<div class="row mb-5" style="width: 480px;">
 					<button type="button" class="btn btn-primary mb-1">
 						<div class="row">
 							<div class="col-1 col-md-1 text-start">
@@ -115,7 +115,7 @@
 							</div>
 						</div>
 					</button>
-					<button type="button" class="btn btn-default mb-1 border">
+					<button type="button" class="btn btn-default mb-1 border box-white">
 						<div class="row">
 							<div class="col-1 col-md-1 text-start">
 								<img src="../../../images/xdmin/sns_icon/icon_round_google_48.png">
@@ -127,10 +127,13 @@
 					</button>
 				</div>
 			</div>
+		</div>
+		<div class="container-fluid">
+		<br>
 			<div class="row text-center mt-3">
 				<div class="col">
 					<div class="fs-6 fw-lighter">
-						©Coupang Corp. All rights reserved.
+						Copyright © Coupang Corp. 2010-2021 All Rights Reserved.
 					</div>
 				</div>
 			</div>
