--- a/public/bootstrapexc3.html
+++ b/public/bootstrapexc3.html
@@ -15,6 +15,12 @@
 <body>
 
 
+	<div class="">
+		<input type="text">
+	</div>
+
+
+
 
 	<script src="../../../bootstrap/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js"></script>
 </body>
