--- a/public/durian/html/xdmin/loginout/login3.html
+++ b/public/durian/html/xdmin/loginout/login3.html
@@ -18,8 +18,13 @@
 	<form>
 		<div class="container-fluid bg-light">
 			<br>
-			<div class="row justify-content-center mb-3">
-				<img src="../../../images/xdmin/coupang2.png" alt="coupang_logo" class="p-0" style="width:195px; height:46px;">
+			
+			<div class="row mb-3">
+				<div class="d-flex justify-content-center">
+					<a href="#">
+						<img src="../../../images/xdmin/coupang2.png" alt="coupang_logo" class="p-0" style="width:195px; height:46px;">
+					</a>	
+				</div>
 			</div>
 
 			<div class="row justify-content-center">
@@ -72,7 +77,7 @@
 					<hr>
 					<div class="row">
 						<div class="col-12">
-							<button class="btn border box-white" style="width: 100%; height: 48px;"><span class="text-primary fw-bold">회원가입</span></button>
+							<a class="btn border box-white d-flex align-items-center justify-content-center" role="button" style="width: 100%; height: 48px;" href="../member/memberForm.html"><span class="text-primary fw-bold">회원가입</span></a>
 						</div>
 					</div>
 
