--- a/public/bootstrapexc.html
+++ b/public/bootstrapexc.html
@@ -18,22 +18,16 @@ a {
 
 <body>
 
-	<button class="btn btn-light" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbar">
-		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
-			viewBox="0 0 16 16">
-			  		<path fill-rule="evenodd"
-				d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-					</svg>
-	</button>
-	<div class="row collapse show" id="collapseNavbar">
-		<ul class="nav bg-secondary">
-			<li class="nav-item"><a class="nav-link link-light" href="#">Home</a></li>
-			<li class="nav-item"><a class="nav-link link-light" href="#">Features</a></li>
-			<li class="nav-item"><a class="nav-link link-light" href="#">시스템 관리</a></li>
-			<li class="nav-item"><a class="nav-link link-light" href="#">Dropdown</a></li>
-		</ul>
+	<p>
+		<a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
+			aria-controls="collapseExample"> 회원관리 </a>
+		<button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+			aria-expanded="false" aria-controls="collapseExample">Button with data-bs-target</button>
+	</p>
+	<div class="collapse" id="collapseExample">
+		<a class="btn btn-primary" role="button" aria-expanded="false"
+			aria-controls="collapseExample"> 유저관리 </a>
 	</div>
-	
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
