--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -319,7 +319,13 @@
 								<td>정상</td>
 								<td>119</td>
 								<td>2022.02.02</td>
-								<td></td>
+								<td>
+									<div class="d-flex justify-content-center align-items-center">
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+									</div>
+								</td>
 							</tr>
 							<tr>
 								<td><input type="checkbox" name="checkbox1" class="form-check-input"></td>
@@ -330,7 +336,13 @@
 								<td>정상</td>
 								<td>13</td>
 								<td>2018.02.28</td>
-								<td></td>
+								<td>
+									<div class="d-flex justify-content-center align-items-center">
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+									</div>
+								</td>
 							</tr>
 							<tr>
 								<td><input type="checkbox" name="checkbox1" class="form-check-input"></td>
@@ -341,7 +353,13 @@
 								<td>정상</td>
 								<td>14</td>
 								<td>2019.07.12</td>
-								<td></td>
+								<td>
+									<div class="d-flex justify-content-center align-items-center">
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+									</div>
+								</td>
 							</tr>
 							<tr>
 								<td><input type="checkbox" name="checkbox1" class="form-check-input"></td>
@@ -352,7 +370,13 @@
 								<td class="text-danger">탈퇴대기</td>
 								<td>41</td>
 								<td>2020.04.26</td>
-								<td></td>
+								<td>
+									<div class="d-flex justify-content-center align-items-center">
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+									</div>
+								</td>
 							</tr>
 							<tr>
 								<td><input type="checkbox" name="checkbox1" class="form-check-input"></td>
@@ -363,7 +387,13 @@
 								<td>정상</td>
 								<td>25</td>
 								<td>2018.09.10</td>
-								<td></td>
+								<td>
+									<div class="d-flex justify-content-center align-items-center">
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+									</div>
+								</td>
 							</tr>
 						</tbody>
 					</table>
