--- a/public/durian/html/xdmin/member/memberList5.html
+++ b/public/durian/html/xdmin/member/memberList5.html
@@ -321,9 +321,9 @@
 								<td>2022.02.02</td>
 								<td>
 									<div class="d-flex justify-content-center align-items-center">
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0">관리</a>
 									</div>
 								</td>
 							</tr>
@@ -338,9 +338,9 @@
 								<td>2018.02.28</td>
 								<td>
 									<div class="d-flex justify-content-center align-items-center">
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0">관리</a>
 									</div>
 								</td>
 							</tr>
@@ -355,9 +355,9 @@
 								<td>2019.07.12</td>
 								<td>
 									<div class="d-flex justify-content-center align-items-center">
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0">관리</a>
 									</div>
 								</td>
 							</tr>
@@ -372,9 +372,9 @@
 								<td>2020.04.26</td>
 								<td>
 									<div class="d-flex justify-content-center align-items-center">
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0">관리</a>
 									</div>
 								</td>
 							</tr>
@@ -389,9 +389,9 @@
 								<td>2018.09.10</td>
 								<td>
 									<div class="d-flex justify-content-center align-items-center">
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-chat-right-dots"></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark"><i class="bi bi-envelope"></i></i></a>
-										<a href="#" class="btn btn-sm btn-outline-dark">관리</a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-chat-right-dots"></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0"><i class="bi bi-envelope"></i></i></a>
+										<a href="#" class="btn btn-sm btn-outline-dark py-0">관리</a>
 									</div>
 								</td>
 							</tr>
